--- a/app/views/curation_concerns/base/_chf_image_viewer.html.erb
+++ b/app/views/curation_concerns/base/_chf_image_viewer.html.erb
@@ -15,7 +15,7 @@
           <div class="viewer-header">
 
             <%= link_to main_app.root_path do %>
-              <%= image_tag "Science_History_Symbol_white_square_41.png", class: "chf-logo" %>
+              <%= image_tag "logo_top_right_quad-white85-81.png", class: "chf-logo", alt: "Science History Institute" %>
             <% end %>
 
             <h1>
