--- a/app/assets/stylesheets/local/navbar.scss
+++ b/app/assets/stylesheets/local/navbar.scss
@@ -74,7 +74,7 @@
 
   .masthead-logo-small {
     height: $small-logo-height;
-    margin: 8px 0 8px 15px;
+    margin: 8px 0 8px 0; // logo is meant to butt against edge
   }
 
   // small navbar
