move search bar to masthead
no longer remembers current search, even on search results page
TODO: javascript to pop out extra options

--- a/app/assets/stylesheets/local/chf-buttons.scss
+++ b/app/assets/stylesheets/local/chf-buttons.scss
@@ -17,5 +17,5 @@
 
 // An especially bright button style using the brand bright breen
 .btn-emphasis {
-  @include button-variant($brand-dark-blue, $brand-bright-green, darken($brand-bright-green, 5%));
+  @include button-variant($brand-dark-blue, $brand-bright-green, darken($brand-bright-green, 10%)); //
 }
