--- a/app/views/catalog/_search_form.html.erb
+++ b/app/views/catalog/_search_form.html.erb
@@ -6,15 +6,15 @@
   <div class="input-group nav-search-text">
 
     <label class="sr-only" for="search-field-header"><%= t("sufia.search.form.q.label") %></label>
-    <%= text_field_tag :q, current_search_parameters , class: "q form-control", id: "search-field-header", placeholder: t("sufia.search.form.q.placeholder") %>
+    <%= text_field_tag :q, '', class: "q form-control", id: "search-field-header", placeholder: t("sufia.search.form.q.placeholder") %>
 
     <div class="input-group-btn">
-      <button type="submit" class="btn btn-primary" id="search-submit-header">
+      <button type="submit" class="btn btn-emphasis" title="Search" id="search-submit-header">
         <%= t('sufia.search.button.html') %>
       </button>
       <%# CHF edit to hide search dropdown for non-staff users %>
       <% if current_ability.current_user.staff? %>
-        <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
+        <button class="btn btn-emphasis dropdown-toggle" type="button" data-toggle="dropdown">
           <span data-search-element="label"><%= t("sufia.search.form.option.all.label_long") %></span>
           <span class="caret"></span>
         </button>
@@ -48,7 +48,7 @@
     <%# hidden field is required in order to allow users to un-check the box %>
     <div class="checkbox form-group">
       <%= hidden_field_tag 'filter_public_domain', value=0, options={ id: "filter_public_domain_hidden" } %>
-      <label for="filter_public_domain"><%= check_box_tag 'filter_public_domain', value=1, checked=(params.fetch("filter_public_domain", 0).to_i > 0) %> <%= "Search only Public Domain" %></label>
+      <label for="filter_public_domain"><%= check_box_tag 'filter_public_domain', value=1 %> <%= "Search only Public Domain" %></label>
     </div>
 
      <div class="form-group">
