--- a/app/views/catalog/_search_form.html.erb
+++ b/app/views/catalog/_search_form.html.erb
@@ -1,9 +1,9 @@
 <%# copied from https://github.com/samvera/sufia/blob/v7.3.0/app/views/catalog/_search_form.html.erb
     to override searchbox dropdown visibility %>
-<%= form_tag search_form_action, method: :get, id: "search-form-header", role: "search" do %>
+<%= form_tag search_form_action, method: :get, class: "nav-search-form", id: "search-form-header", role: "search" do %>
   <%= render_hash_as_hidden_fields(search_state.params_for_search.except(:q, :search_field, :qt, :page, :utf8, :filter_public_domain)) %>
   <%= hidden_field_tag :search_field, 'all_fields' %>
-  <div class="input-group">
+  <div class="input-group nav-search-text">
 
     <label class="sr-only" for="search-field-header"><%= t("sufia.search.form.q.label") %></label>
     <%= text_field_tag :q, current_search_parameters , class: "q form-control", id: "search-field-header", placeholder: t("sufia.search.form.q.placeholder") %>
@@ -43,10 +43,21 @@
     </div><!-- /.input-group-btn -->
 
   </div><!-- /.input-group -->
-  <div>
+
+  <div class="search-options">
     <%# hidden field is required in order to allow users to un-check the box %>
-    <%= hidden_field_tag 'filter_public_domain', value=0, options={ id: "filter_public_domain_hidden" } %>
-    <%= check_box_tag 'filter_public_domain', value=1, checked=(params.fetch("filter_public_domain", 0).to_i > 0) %>
-    <label for="filter_public_domain"><%= "Search only Public Domain" %></label>
+    <div class="checkbox form-group">
+      <%= hidden_field_tag 'filter_public_domain', value=0, options={ id: "filter_public_domain_hidden" } %>
+      <label for="filter_public_domain"><%= check_box_tag 'filter_public_domain', value=1, checked=(params.fetch("filter_public_domain", 0).to_i > 0) %> <%= "Search only Public Domain" %></label>
+    </div>
+
+     <div class="form-group">
+      <h3>Date limit</h3>
+      <label class="sr-only" for="search-option-date-from">From</label>
+      <input type="number" name="range[year_facet_isim][begin]" class="form-control search-option-year"  placeholder="from" id="search-option-date-from">
+      &nbsp;&ndash;&nbsp;
+      <label class="sr-only" for="search-option-date-to">From</label>
+      <input type="number" name="range[year_facet_isim][end]" class="form-control search-option-year"  placeholder="to" id="search-option-date-from">
+    </div>
   </div>
 <% end %>
