remove search from secondary navbar, just breadcrumbs, styled simply taking up little space

--- a/app/views/_controls.html.erb
+++ b/app/views/_controls.html.erb
@@ -1,19 +1,11 @@
 <%# overrides https://github.com/projecthydra/sufia/blob/v7.3.0/app/views/_controls.html.erb %>
-<nav id="searchbar" class="navbar navbar-default navbar-static-top">
+<nav id="breadcrumbs">
   <div class="chf-container-fluid">
-    <div class="row">
-
       <%# custom CHF breadcrumbs up here instead of nav elements %>
-      <div class="breadcrumbs-navbar-wrapper navbar-left col-sm-5 col-md-6">
+      <div class="breadcrumbs-navbar-wrapper">
         <%= render_breadcrumbs builder: Sufia::BootstrapBreadcrumbsBuilder %>
-      </div>
-
-      <div class="searchbar-right navbar-right col-sm-7 col-md-6">
-        <%= render partial: 'catalog/search_form' %>
       </div>
     </div>
   </div>
-
-
 </nav><!-- /.navbar -->
 
