query constraint is editable

--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -290,6 +290,21 @@
     @extend .chf-container-fluid;
     @extend .clearfix;
     text-align: left;
+
+    .chf-constraints-query {
+      display: inline;
+      .input-group {
+        margin: 0 0.33em 0 0;
+      }
+      input {
+        border-bottom-left-radius: $btn-border-radius-base;
+        border-top-left-radius: $btn-border-radius-base;
+      }
+      a:last-child, button:last-child {
+        border-top-right-radius: $btn-border-radius-base;
+        border-bottom-right-radius: $btn-border-radius-base;
+      }
+    }
   }
 
   #appliedParams.constraints-container {
@@ -332,7 +347,7 @@
       letter-spacing: $small-caps-letter-spacing;
       font-weight: $semi-bold-weight;
       margin-right: 0.66em;
-      color: #888;
+      color: $brand-dark-blue;
       vertical-align: middle;
     }
 
