--- a/app/views/catalog/_search_form.html.erb
+++ b/app/views/catalog/_search_form.html.erb
@@ -62,5 +62,9 @@
       <label class="sr-only" for="search-option-date-to">From</label>
       <input type="number" name="range[year_facet_isim][end]" class="form-control search-option-year"  autocomplete="off" placeholder="to" id="search-option-date-from">
     </div>
+
+    <div class="form-group pull-right">
+      <button type="submit" class="btn btn-emphasis"><span class="glyphicon glyphicon-search"></span> Search</button>
+    </div>
   </div>
 <% end %>
