editable query constraint display tweaks

--- a/app/assets/stylesheets/local/_variables.scss
+++ b/app/assets/stylesheets/local/_variables.scss
@@ -66,12 +66,12 @@ $font-family-sans-serif: $brand-sans-serif, "Helvetica Neue", Helvetica, Arial, 
 $font-size-base: 16px;
 $navbar-inverse-link-color: $brand-bright-green;
 
-
 $well-bg: $bg-lightly-shaded;
 $navbar-default-bg: $bg-lightly-shaded;
 $panel-default-heading-bg: $bg-lightly-shaded;
 $panel-footer-bg: $bg-lightly-shaded;
 $breadcrumb-bg: $bg-lightly-shaded;
+$input-group-addon-bg: $bg-lightly-shaded;
 
 // border radius matching some elements on chemheritage.org, larger than bootstrap default
 $btn-border-radius-base:        9px !default;
