--- a/app/views/catalog/_search_form.html.erb
+++ b/app/views/catalog/_search_form.html.erb
@@ -49,18 +49,18 @@
   </div><!-- /.input-group -->
 
   <div class="search-options">
-    <%# hidden field is required in order to allow users to un-check the box %>
-    <div class="form-group checkbox">
-      <label for="filter_public_domain"><%= check_box_tag 'filter_public_domain', value=1 %> <%= "Only Public Domain" %></label>
-    </div>
 
      <div class="form-group">
-      <h3>Date</h3>
+      <h3>Limit Dates</h3>
       <label class="sr-only" for="search-option-date-from">From</label>
-      <input type="text" name="range[year_facet_isim][begin]" class="form-control search-option-year" autocomplete="off" placeholder="from" id="search-option-date-from" pattern="[0-9]{3,4}" title="start year (yyyy)">
+      <input type="text" inputmode="numeric" name="range[year_facet_isim][begin]" class="form-control search-option-year" autocomplete="off" placeholder="from" id="search-option-date-from" pattern="[0-9]{3,4}" title="start year (yyyy)">
       &nbsp;&ndash;&nbsp;
       <label class="sr-only" for="search-option-date-to">From</label>
-      <input type="text" name="range[year_facet_isim][end]" class="form-control search-option-year"  autocomplete="off" placeholder="to" id="search-option-date-from" pattern="[0-9]{3,4}" title="end year (yyyy)">
+      <input type="text" inputmode="numeric" name="range[year_facet_isim][end]" class="form-control search-option-year"  autocomplete="off" placeholder="to" id="search-option-date-from" pattern="[0-9]{3,4}" title="end year (yyyy)">
+    </div>
+
+    <div class="form-group checkbox">
+      <label for="filter_public_domain"><%= check_box_tag 'filter_public_domain', value=1 %> Public Domain Only </label>
     </div>
 
     <div class="form-group pull-right extra-submit-button">
