--- a/app/views/catalog/_query_constraint_as_form.html.erb
+++ b/app/views/catalog/_query_constraint_as_form.html.erb
@@ -1,3 +1,7 @@
+<%#  query constraint as a live search box/form allowing you to change query,
+     instead of just a label, and additional constraint for public-domain-only where
+     appropriate %>
+
 <form class="form-inline chf-constraints-query">
     <%= render_hash_as_hidden_fields(search_state.params_for_search.except(:q, :qt, :page, :utf8)) %>
 
@@ -17,3 +21,7 @@
       </span>
     </span>
 </form>
+
+<% if local_assigns[:params].try { |h| h[:filter_public_domain] } == "1" %>
+  <%= render_constraint_element(nil, "Only public domain", remove: search_state.params_for_search.except(:filter_public_domain, :page, :utf8)) %>
+<% end %>
