--- a/app/views/catalog/_search_form.html.erb
+++ b/app/views/catalog/_search_form.html.erb
@@ -57,10 +57,10 @@
      <div class="form-group">
       <h3>Date</h3>
       <label class="sr-only" for="search-option-date-from">From</label>
-      <input type="number" name="range[year_facet_isim][begin]" class="form-control search-option-year" autocomplete="off" placeholder="from" id="search-option-date-from">
+      <input type="text" name="range[year_facet_isim][begin]" class="form-control search-option-year" autocomplete="off" placeholder="from" id="search-option-date-from" pattern="[0-9]{3,4}" title="start year (yyyy)">
       &nbsp;&ndash;&nbsp;
       <label class="sr-only" for="search-option-date-to">From</label>
-      <input type="number" name="range[year_facet_isim][end]" class="form-control search-option-year"  autocomplete="off" placeholder="to" id="search-option-date-from">
+      <input type="text" name="range[year_facet_isim][end]" class="form-control search-option-year"  autocomplete="off" placeholder="to" id="search-option-date-from" pattern="[0-9]{3,4}" title="end year (yyyy)">
     </div>
 
     <div class="form-group pull-right extra-submit-button">
