--- a/app/assets/stylesheets/local/search_form.scss
+++ b/app/assets/stylesheets/local/search_form.scss
@@ -69,7 +69,7 @@
 
       background: $brand-light-grey;
       border: 1px solid transparent;
-      box-shadow: 0 0 100px black;
+      box-shadow: 0 20px 40px 10px rgba(0,0,0,0.5);
       border-radius: 0 0 $btn-border-radius-base $btn-border-radius-base;
       color: $brand-dark-blue;
 
