--- a/app/views/static/faq.html.erb
+++ b/app/views/static/faq.html.erb
@@ -1,4 +1,4 @@
-<div class="faq-page branded-body-font">
+<div class="faq-page branded-body-font text-page">
   <h1 class="brand-alt-h1">Frequently Asked Questions</h1>
 
   <dl class="info">
