--- a/app/views/static/policy.html.erb
+++ b/app/views/static/policy.html.erb
@@ -1,4 +1,4 @@
-<div class="policy-page branded-body-font">
+<div class="policy-page branded-body-font text-page">
   <h1 class="brand-alt-h1">Digital Collections Policy</h1>
 
   <h2>Mission</h2>
