--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -1,6 +1,5 @@
-<div class="branded-body-font">
+<div class="branded-body-font text-page">
   <h1 class="brand-alt-h1">About</h1>
-
 
   <p>The Science History Instistute’s Digital Collections offer highlights from our library, archives, and museum collections. Our chronology ranges from the Roman Empire to the 21st century, and the materials include everything from fine art to rare books and from scientific objects to photographs.</p>
 
