--- a/app/assets/stylesheets/local/_variables.scss
+++ b/app/assets/stylesheets/local/_variables.scss
@@ -20,7 +20,7 @@ $brand-serif: 'abril-text';
 
 $brand-blue-text: #338EA2; // brand blue is too light for text on white, here's a darker version 3595AA.
 $bg-lightly-shaded: #f9f9f9; // does not match brand, no suitable color in brand
-$special-label-muted-color: #888; // not from brand, lighter than normal muted, cause it's bolded a bit and such
+$special-label-muted-color: $brand-dark-grey;
 //$brand-highlight-color: #f15c2b; // an orange used on (old) Distillations website, perhaps use as an alterante highlight sitewide
 
 // Why do we need so much spacing for it to look reasonable? Good spacing for 14px and weight 600.
@@ -112,7 +112,7 @@ $btn-border-radius-small:       9px !default;
   line-height: normal;
   letter-spacing: $small-caps-letter-spacing;
   a:not(:focus):not(:hover) {
-    color: #888;
+    color: $special-label-muted-color;
   }
 }
 
