--- a/app/assets/stylesheets/local/work-show.scss
+++ b/app/assets/stylesheets/local/work-show.scss
@@ -66,7 +66,7 @@
 
   .show-genre {
     @extend %special-label;
-    color: #888;
+    color: $special-label-muted-color;
     margin-bottom: 4px;
   }
 
