try to make dates more legible in abril

--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -257,8 +257,7 @@
         margin-top: $paragraph-spacer;
       }
       li {
-        @extend %text-font;
-        font-variant-numeric: lining-nums;
+        @extend %text-font-numerals;
       }
     }
 
