--- a/app/assets/stylesheets/local/work-show.scss
+++ b/app/assets/stylesheets/local/work-show.scss
@@ -104,8 +104,7 @@
   }
 
   .show-date {
-    @extend %text-font;
-    font-variant-numeric: lining-nums;
+    @extend %text-font-numerals;
     ul {
       @extend .list-unstyled;
       margin-bottom: 0;
