--- a/app/assets/stylesheets/local/_variables.scss
+++ b/app/assets/stylesheets/local/_variables.scss
@@ -123,3 +123,13 @@ $btn-border-radius-small:       9px !default;
   line-height: normal;
 }
 
+// Try to make our date field that has mostly numbers legible with abril
+%text-font-numerals {
+ font-family: $brand-serif;
+  // 16px in abril is really small, 17px looks more like 16px in other fonts.
+ font-size: 17px;
+ line-height: normal;
+ font-variant-numeric: lining-nums;
+ letter-spacing: 0.025em;
+}
+
