--- a/app/assets/stylesheets/local/work-show.scss
+++ b/app/assets/stylesheets/local/work-show.scss
@@ -93,7 +93,7 @@
     margin-bottom: 0;
     &, h2 {
       font-family: $brand-alt-header-font;
-      font-weight: normal;
+      font-weight: 300;
       @extend h3;
       margin-bottom: 0;
       margin-top: 0;
