--- a/app/assets/stylesheets/local/_variables.scss
+++ b/app/assets/stylesheets/local/_variables.scss
@@ -24,7 +24,7 @@ $special-label-muted-color: $brand-dark-grey;
 //$brand-highlight-color: #f15c2b; // an orange used on (old) Distillations website, perhaps use as an alterante highlight sitewide
 
 // Why do we need so much spacing for it to look reasonable? Good spacing for 14px and weight 600.
-$small-caps-letter-spacing: 0.04em;
+$small-caps-letter-spacing: 0.035em;
 
 $brand-btn-alt-bg: $brand-bright-green;
 $brand-alt-header-font: $brand-sans-serif, sans-serif;
@@ -35,8 +35,8 @@ $semi-bold-weight: 600;
 
 // Maximum line length we judge to be readable at standard base font size.
 // Used to constrain some block text areas on large screens.
-$max-readable-width: 565px;
-$long-max-readable-width:  725px; // unclear how readable it really is, but we do it sometimes anyway
+$max-readable-width: 64ch;
+$long-max-readable-width: 720px; // unclear how readable it really is, but we do it sometimes anyway
 
 
 // via experimentation, on search results page larger than this the
