alternate rebrand homepage colors

--- a/app/assets/stylesheets/local/homepage.scss
+++ b/app/assets/stylesheets/local/homepage.scss
@@ -93,7 +93,7 @@
   $categories-box-margin: 59px;
 
   .categories-list {
-    background-color: $brand-inverse;
+    background-color: $brand-light-grey;
     padding-top: 34px;
     display: flex;
     flex-direction: row;
@@ -115,8 +115,8 @@
         left: 0;
         width: 100%;
         height: 56px;
-        color: $brand-dark-blue;
-        background-color: $brand-bright-green;
+        color: white;
+        background-color: $brand-dark-blue;
         padding: 10px;
 
         .collection-title {
@@ -142,7 +142,7 @@
   }
   @media (min-width: $screen-sm-min) {
     .featured-collection-container {
-      background-color: $bg-lightly-shaded;
+      background-color: white;
       display: flex;
       align-items: center;
       .featured-collection-callouts {
