--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -71,7 +71,7 @@
        margin-bottom: 0;
        h3 {
         font-size: $font-size-base;
-        color: $brand-inverse;
+        color: black;
         font-weight: normal;
         line-height: 1.4;
        }
